--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 body {
 	margin: 0;
+	height: 100svh;
 	font-family: 'Exo 2', sans-serif;
 }
 
@@ -20,4 +21,36 @@ header h1 {
 	margin: 0;
 	margin-top: 20px;
 	letter-spacing: 25px;
+}
+
+footer {
+	background-color: black;
+	position: absolute;
+	bottom: 0px;
+	width: 100%;
+	display: grid;
+	justify-content: center;
+}
+
+footer p {
+	margin: 8px;
+}
+
+footer a {
+	color: white;
+	text-decoration: none;
+	display: inline-block;
+}
+
+.footer-text {
+	font-weight: bold;
+	letter-spacing: 5px;
+	display: grid;
+	grid-auto-flow: column;
+	justify-content: center;
+	align-items: center;
+}
+
+footer i {
+	font-size: 1.5rem;
 }
