--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 :root {
 	--combine-blue: hsl(189, 95%, 44%);
 	--combine-light-blue: hsl(177, 71%, 43%);
-	--combine-dark-blue: hsl(197, 83%, 9%);
+	--combine-dark-blue: hsl(197, 83%, 9%, 0.4);
 }
 
 body {
@@ -71,6 +71,22 @@ main {
 	align-content: center;
 	justify-content: center;
 	gap: 10px;
+	align-items: start;
+}
+
+main {
+	background-image: url(./assets/Russels_Lab_80.jpg);
+	background-repeat: no-repeat;
+	background-position: center;
+	background-size: cover;
+	display: grid;
+	grid-auto-flow: column;
+	align-content: center;
+	justify-content: center;
+	gap: 10px;
+	align-items: start;
+	margin-bottom: 35px;
+	margin-left: -125px;
 }
 
 #root {
@@ -94,7 +110,7 @@ main {
 }
 
 .card > * {
-	border-left: 8px solid var(--combine-blue);
+	border-left: 5px solid var(--combine-blue);
 	cursor: pointer;
 }
 
@@ -105,6 +121,7 @@ main {
 	gap: 10px;
 	grid-template-columns: repeat(6, auto);
 	grid-template-rows: repeat(3, auto);
+	z-index: 1;
 }
 
 .card img {
@@ -123,10 +140,16 @@ main {
 	color: var(--combine-blue);
 	background-color: var(--combine-dark-blue);
 	align-items: center;
-	border-left: 8px solid var(--combine-blue);
+	border-left: 5px solid var(--combine-blue);
+	z-index: 1;
 }
 
 .score-container h2 {
 	padding: 0 10px;
 	margin: 0;
+}
+
+video {
+	transform: scale(14) translateX(52.5%) translateY(43%);
+	filter: brightness(80%);
 }
