--- a/src/index.css
+++ b/src/index.css
@@ -124,7 +124,7 @@ main {
 	gap: 10px;
 	grid-template-columns: repeat(6, auto);
 	grid-template-rows: repeat(3, auto);
-	z-index: 1;
+	z-index: 2;
 	padding-bottom: 10px;
 	border-bottom: 1px solid var(--combine-dark);
 }
@@ -147,7 +147,7 @@ main {
 	height: 120px;
 	align-items: center;
 	border-top: 2px solid var(--combine-blue);
-	z-index: 1;
+	z-index: 2;
 	justify-items: end;
 	align-content: center;
 	transform: translateX(8px);
@@ -177,6 +177,7 @@ video {
 	transform: scale(13.5) translateX(51.5%) translateY(38%);
 	filter: brightness(80%);
 	border-left: 1px solid var(--combine-blue);
+	z-index: 2;
 }
 
 .invisible {
@@ -185,7 +186,7 @@ video {
 
 .game-top,
 .game-bottom {
-	z-index: 1;
+	z-index: 3;
 }
 
 .game-bottom img {
@@ -247,7 +248,7 @@ video {
 
 .start, .lost, .won {
 	position: absolute;
-	z-index: 1;
+	z-index: 2;
 	top: 50%;
 	left: 50%;
 	display: grid;
@@ -278,4 +279,15 @@ video {
 	grid-auto-flow: column;
 	align-items: center;
 	gap: 20px;
+}
+
+.temp-background {
+	filter: brightness(76%) hue-rotate(7deg);
+	position: absolute;
+	scale: 50%;
+	top: 50%;
+	left: 50%;
+	transform: scaleX(1.76) translateX(-57.6%) translateY(-93.9%);
+	height: 1352px;
+	z-index: 1;
 }
