Simplify glitch effect

--- a/src/index.css
+++ b/src/index.css
@@ -292,7 +292,7 @@ video {
 }
 
 .glitch {
-	animation: shake 0.8s cubic-bezier(.36,.07,.19,.97) both;
+	animation: shake 0.8s;
 	transform: translate3d(0, 0, 0);
 	backface-visibility: hidden;
 	perspective: 1000px;
@@ -303,24 +303,8 @@ video {
 	filter: sepia(1) hue-rotate(150deg) saturate(2) contrast(1.2) drop-shadow(0 0 5px hsla(189, 95%, 44%, 0.2)) blur(20px);
 	}
 
-	10%, 90% {
-	transform: translate3d(-1px, 0, 0);
-	filter: sepia(1) hue-rotate(150deg) saturate(2) contrast(1.2) drop-shadow(0 0 5px hsla(189, 95%, 44%, 0.2)) blur(10px);
-	}
-	
-	20%, 80% {
-	transform: translate3d(2px, 0, 0);
-	filter: sepia(1) hue-rotate(150deg) saturate(2) contrast(1.2) drop-shadow(0 0 5px hsla(189, 95%, 44%, 0.2)) blur(25px)
-	}
-
-	30%, 50%, 70% {
-	transform: translate3d(-4px, 0, 0);
-	filter: sepia(1) hue-rotate(150deg) saturate(2) contrast(1.2) drop-shadow(0 0 5px hsla(189, 95%, 44%, 0.2)) blur(15px);
-	}
-
-	40%, 60% {
-	transform: translate3d(4px, 0, 0);
-	filter: sepia(1) hue-rotate(150deg) saturate(2) contrast(1.2) drop-shadow(0 0 5px hsla(189, 95%, 44%, 0.2)) blur(10px);
+	100% {
+		filter: sepia(1) hue-rotate(150deg) saturate(2) contrast(1.2) drop-shadow(0 0 5px hsla(189, 95%, 44%, 0.2));
 	}
 }
 
